update wavesurfer, structural improvements and fix zoom overflow when media partial container is active

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -3108,6 +3108,7 @@ Column content
     width: 100%;
     display: flex;
     flex: 1;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 24px;
